fix card-mosaic bug on mobile

--- a/assets/css/components/cards-mosaic.scss
+++ b/assets/css/components/cards-mosaic.scss
@@ -180,6 +180,15 @@
   .cards-mosaic {
       .card {
         margin: .5em !important;
+
+        &.bigger {
+          width: 10em;
+          height: 10em;
+
+          .card-subtitle {
+            font-size: .6em;
+          }
+        }
       }
   }
 }
